--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
